# ragnar

./: .gitignore  README.md  pyproject.toml
ragnar/: config.py  main_dev.py
ragnar/backend/: base.py  enums.py  models_config.py  rag.py  rag_engine.py  rag_generator.py  retrieval_grader.py  tools.py  utils.py
ragnar/backend/components/: answer_generator.py  answer_grader.py  hallucination_grader.py  question_rewriter.py  retrieval_grader.py  retriever.py  router.py  utility_components.py
ragnar/backend/models/: base_rag.py  enums.py  feedback_base_rag.py  self_rag.py
ragnar/backend/qa_rag/: models_config.py  state.py
ragnar/backend/qa_rag/components/: answer_grader.py  hallucination_grader.py  question_rewriter.py  router.py  utility_components.py
ragnar/backend/qa_rag/models/: base_rag.py  feedback_base_rag.py  self_rag.py
ragnar/backend/researcher/: configuration.py  enums.py  researcher.py  state.py  summarizer.py
ragnar/backend/researcher/components/: planner.py  query_writer.py  summary_reviewer.py  summary_writer.py  web_search.py
ragnar/ui/: app.py
src/: config.py  main_dev.py
src/ragnar/: __init__.py
src/ragnar/agents/: __init__.py  base_agent.py  business_intelligence_agent.py  configuration.py  enums.py  planning_tools.py  state.py  tools.py  utils.py
src/ragnar/apps/: __init__.py  business_research.py  fastapi_app.py  fastapi_client.py  streamlit_ui.py
