[tool.poetry]
name = "ragnar"
version = "0.1.0"
description = "Ragnar"
authors = ["Bertan Günyel <bertan.gunyel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
streamlit = "^1.41.1"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-ollama = "^0.2.2"
pydantic-settings = "^2.7.0"
langchain-community = "^0.3.13"
pypdf = "^5.1.0"
langgraph = "^0.2.60"
pillow = "^11.0.0"
bs4 = "^0.0.2"
chromadb = "^0.5.23"
langchain-chroma = "^0.1.4"
gpt4all = "^2.8.2"
tiktoken = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
