[project]
name = "ragnar"
version = "0.1.0"
description = "Retrieval Augmented Generation based kNowledge AdviseR"
readme = "README.md"
authors = [
    { name = "Bertan Günyel", email = "bertan.gunyel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ai-common @ git+https://github.com/bgunyel/ai-common.git@main",
    "business-researcher @ git+https://github.com/bgunyel/business-researcher.git@main",
    "fastapi>=0.116.1",
    "streamlit>=1.47.1",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
business-researcher = "ragnar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
